Upgrade pro JDK 20 + ajustes de métodos depreciados de URL